<resources>
    <string name="app_name">Supervisório Xbee</string>

    <string name="splash_title">Supervisório XBee</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Supervisório Xbee</string>

    <string name="name">nome</string>
    <string name="email">email</string>
    <string name="password">senha</string>
    <string name="login_button">entrar</string>
    <string name="register_button">registrar</string>
    <string name="title_activity_home">Coordenadores</string>

    <string name="home_logout">sair</string>
    <string name="home_coordinator">Coordenadores</string>
    <string name="main_title_coordinator">Título Principal</string>
    <string name="body_title_coordinator">resumo sobre o coordenador</string>

    <string name="home_module">Módulos</string>
    <string name="main_title_module">Título Principal</string>
    <string name="body_title_module">resumo sobre o módulo</string>

    <string name="packFrequency">Frequência de Pacotes</string>
    <string name="sleepFrequency">Sleep Frequency</string>
    <string name="sleepTime">Sleep Time</string>
    <string name="numb_of_samples">Número de Amostras</string>
    <string name="numb_of_modules">Número de Módulos</string>
    <string name="samples">Amostras</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">Supervisório Xbee</string>
    <string name="title_activity_module">Módulos</string>
    <string name="title_activity_module_dialog">Detalhes</string>
    <string name="title_activity_coordinator_dialog">Detalhes</string>
    <string name="title_activity_sample">Amostras</string>

    <string name="current_password">senha atual</string>
    <string name="new_password">nova senha</string>
    <string name="confirm">CONFIRMAR</string>
    <string name="cancel">CANCELAR</string>


    <!-- <string name="gcm_defaultSenderId">510998002514</string> -->
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="title_activity_log">Log do Sistema</string>
    <string name="title_activity_profile">Editar Perfil</string>

</resources>
