<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context="com.example.caique.sup.Activities.ProfileActivity">

    <ProgressBar
        android:id="@+id/profile_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/profile_content_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView android:text="@string/name" android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/profile_name"
            android:textSize="12dp"
            android:layout_marginBottom="6dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView android:text="@string/email" android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/profile_email"
            android:layout_marginBottom="6dp"
            android:textSize="12dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView android:text="@string/current_password" android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/profile_current_password"
            android:layout_width="fill_parent"
            android:layout_marginBottom="6dp"
            android:textSize="12dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

        <TextView android:text="@string/new_password" android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/profile_new_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:inputType="textPassword"
            android:textSize="12dp"
            android:hint="deve ser > 3 caracteres"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:weightSum="1">

            <Button
                android:id="@+id/profile_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:layout_weight="0.5"/>

            <Button
                android:id="@+id/profile_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="0.5"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
